--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-    <h1>hello coursera</h1>
+    <h1>hello coursera I'm happy</h1>
     <script src="main.js"></script>
 </body>
 </html>
