--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <h1>hello coursera I'm happy</h1>
-    <script src="main.js"></script>
+    <script src="app.js"></script>
+    <script src="angular.min.js"></script>
+
 </body>
 </html>
