stating the work with angular

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="myFirstApp">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,8 +10,6 @@
     <script src="angular.min.js"></script>   
 </head>
 <body>
-    <h1>hello coursera I'm happy</h1>
-
-
+    <div ng-controller="myFirstController"></div>
 </body>
 </html>
